#99 June 24, 1998
  - callFinish() added
#100 July 15, 1998
  - small fixes
  - callFinish() added
#101 August 12, 1998
  - Borland C++ 5.0 project file added
  - small fixes
#102 August 14, 1998
  - makefile fix
#103 Dec 27, 1998
  - updated for sim170
  - extraStackForEnvir() raised to 8K (was zero)
  - some bugs fixed in heap.cc
  - makefile renamed to makefile.in
  - runningModule() corrected to contextModule()
#104 Jan 25, 1999
  - updated for sim172d
#105 Feb 7, 1999
  - small fixes
#106 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - removed support for DOS with BC3.1
Aug 13, 1999
  - _dummy_for_tkenv_inspect() bug fixed
------ omnetpp-2.0b released ------
Sept 20, 1999
 - typo fixed in Makefile.in: $(CLFAGS) --> $(CFLAGS)
------ omnetpp-2.0b2 released ------
Dec 4,1999
  - compiled with MSVC. cmdenv.dsp added. NOTE: one has to rename all .cc files
    to .cpp for compiling (ren *.cc *.cpp)!
  - To Do: check heap.cc
Dec 5,1999
  - Makefile.vc added
------ omnetpp-2.0b3 released ------
Mar 26, 2000
 - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
   replacements throughout the code)
April 4, 2000
 - dynamic registration of user interface (TOmnetApp) classes introduced:
   Register_OmnetApp() macro added to cmdenv.cc
April 6-10, 2000
 - changes to enable linking a Windows DLL from the library
 - memoryIsLow() reorganized; cosmetic changes on heap.cc
 - adjustments because of TOmnetApp constructor changes
 - added cmdenvDummy()/envirDummy(): functions which can/should be called from
   Envir in order to force the linker to include the Cmdenv library into the
   executable. (These functions do absolutely nothing.)
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
