@@ -363,4 +363,7 @@ May 7, 2000
  - Makefile.vc improvements from Balazs Kelemen
  - tk_PatchLevel check corrected (complained about Tk 8.0.5) [reported by
    Ulrich Kaage]
-
+May 10, 2000
+ - [Tkenv]/extra-stack= option added, it specifies (in bytes) how much extra
+   stack each activity() module needs when executing under Tkenv.
+   This used to be hardcoded (16384), now users can fine-tune it.
