@@ -122,4 +122,7 @@ April 6-10, 2000
  - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
 May 7, 2000
  - Makefile.vc improvements from Balazs Kelemen
-
+May 10, 2000
+ - [Cmdenv]/extra-stack= option added, it specifies (in bytes) how much extra
+   stack each activity() module needs when executing under Cmdenv.
+   This used to be hardcoded (8192), now users can fine-tune it.
